--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "Your Orders",
-  "name": "Your Orders",
+  "short_name": "ImageLines",
+  "name": "Zahner ImageLines App",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "Zcon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
