--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-    },
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-replace": "^1.0.0"
+  },
  }
